--- a/test.html
+++ b/test.html
@@ -20,9 +20,9 @@
 
     <script>
 
-        var gs = new Gaia3dSlider('myRange');
-        var gs2 = new Gaia3dSlider('myRange2');
-        var gs3 = new Gaia3dSlider('myRange3');
+        var gs = new KotSlider('myRange');
+        var gs2 = new KotSlider('myRange2');
+        var gs3 = new KotSlider('myRange3');
 
         gs.setMax(20);
         gs.setStep(2);
